src/test/ui/issue-10291.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-10291.rs:13:9
   |
LL |         x //~ ERROR E0312
   |         ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-10291.rs:12:5
   |
LL | fn test<'x>(x: &'x isize) {
   |         -- lifetime `'x` defined here
LL |     drop::<Box<for<'z> FnMut(&'z isize) -> &'z isize>>(Box::new(|z| {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'x` must outlive `'static`

error: aborting due to previous error

